--- a/index.html
+++ b/index.html
@@ -345,6 +345,13 @@
 </tr>
 
 <tr>
+<td>7th System</td>
+<td>1998</td>
+<td>Sirius</td>
+<td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
 <td>8 1/2 Ghosts</td>
 <td>2004</td>
 <td>Alternative</td>
@@ -3035,6 +3042,27 @@
 </tr>
 
 <tr>
+<td>Akiko</td>
+<td>1996</td>
+<td>Sirius</td>
+<td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Akiko On The Planet Smoo</td>
+<td>1995</td>
+<td>Sirius</td>
+<td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Akiko Pocket Size</td>
+<td>2004</td>
+<td>Sirius</td>
+<td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Akira</td>
 <td>1982</td>
 <td>Marvel</td>
@@ -5488,6 +5516,13 @@
 
 <tr>
 <td>Angry Christ Comix</td>
+<td>1994</td>
+<td>Sirius</td>
+<td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Angry Christ Comix</td>
 <td>2003</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
@@ -5568,6 +5603,27 @@
 <td>1988</td>
 <td>Vertigo</td>
 <td><a href="AnimalMan/AnimalMan.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Animal Mystic</td>
+<td>1994</td>
+<td>Sirius</td>
+<td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Animal Mystic TPB</td>
+<td>1996</td>
+<td>Sirius</td>
+<td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Animal Mystic Water Wars</td>
+<td>1996</td>
+<td>Sirius</td>
+<td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
 </tr>
 
 <tr>
@@ -6410,6 +6466,13 @@
 </tr>
 
 <tr>
+<td>Armageddonquest</td>
+<td>1997</td>
+<td>Sirius</td>
+<td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Armitage</td>
 <td>1993</td>
 <td>Fleetway Quality</td>
@@ -6788,6 +6851,20 @@
 </tr>
 
 <tr>
+<td>Artesia</td>
+<td>1999</td>
+<td>Sirius</td>
+<td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Artesia Afield</td>
+<td>2000</td>
+<td>Sirius</td>
+<td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Artesia Afield</td>
 <td>2003</td>
 <td>Archaia</td>
@@ -6806,6 +6883,13 @@
 <td>2006</td>
 <td>Archaia</td>
 <td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Artesia Annual</td>
+<td>1999</td>
+<td>Sirius</td>
+<td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
 </tr>
 
 <tr>
@@ -8097,6 +8181,13 @@
 </tr>
 
 <tr>
+<td>Baby Demonica</td>
+<td>2002</td>
+<td>Sirius</td>
+<td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Baby Huey</td>
 <td>1956</td>
 <td>Harvey</td>
@@ -8674,6 +8765,27 @@
 <td>1967</td>
 <td>Topps</td>
 <td><a href="Topps/Topps.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Banzai Girl</td>
+<td>2002</td>
+<td>Sirius</td>
+<td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Banzai Girl Anual</td>
+<td>2002</td>
+<td>Sirius</td>
+<td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Banzai Girl Trade Paperback</td>
+<td>2004</td>
+<td>Sirius</td>
+<td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9307,6 +9419,13 @@
 </tr>
 
 <tr>
+<td>Beast That Ate Morioka</td>
+<td>2004</td>
+<td>Sirius</td>
+<td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Beasts Of Burden</td>
 <td>2013</td>
 <td>Dark Horse</td>
@@ -9793,6 +9912,13 @@
 <td>1967</td>
 <td>Gold Key</td>
 <td><a href="GoldKey/GoldKey.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Best Of Crypt Of Dawn</td>
+<td>2000</td>
+<td>Sirius</td>
+<td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
 </tr>
 
 <tr>
@@ -13395,6 +13521,13 @@
 </tr>
 
 <tr>
+<td>Broken Heroes</td>
+<td>1998</td>
+<td>Sirius</td>
+<td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Broken Pieces</td>
 <td>2011</td>
 <td>Aspen</td>
@@ -14917,6 +15050,13 @@
 <td>1957</td>
 <td>Charlton</td>
 <td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cartoonist</td>
+<td>1997</td>
+<td>Sirius</td>
+<td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
 </tr>
 
 <tr>
@@ -19194,6 +19334,13 @@
 </tr>
 
 <tr>
+<td>Crypt Of Dawn</td>
+<td>1996</td>
+<td>Sirius</td>
+<td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Crypt of Screams</td>
 <td>2017</td>
 <td>American Mythology</td>
@@ -20280,6 +20427,13 @@
 </tr>
 
 <tr>
+<td>Darklight</td>
+<td>2000</td>
+<td>Sirius</td>
+<td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dark Mysteries</td>
 <td>1951</td>
 <td>Master Comics</td>
@@ -20721,6 +20875,13 @@
 
 <tr>
 <td>Dawn</td>
+<td>1995</td>
+<td>Sirius</td>
+<td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dawn</td>
 <td>2010</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
@@ -20731,6 +20892,27 @@
 <td>2014</td>
 <td>Dynamite</td>
 <td><a href="Dynamite/Dynamite.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dawn: 10th Anniversary Special</td>
+<td>1999</td>
+<td>Sirius</td>
+<td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dawn: Lucifer's Halo</td>
+<td>1997</td>
+<td>Sirius</td>
+<td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dawn: Return Of The Goddess</td>
+<td>1999</td>
+<td>Sirius</td>
+<td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
 </tr>
 
 <tr>
@@ -21165,6 +21347,13 @@
 <td>2005</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Deady: Big In Japane</td>
+<td>2007</td>
+<td>Sirius</td>
+<td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
 </tr>
 
 <tr>
@@ -21774,6 +21963,13 @@
 <td>1975</td>
 <td>Atlas Seaboard</td>
 <td><a href="DemonHunter/DemonHunter.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Demongate</td>
+<td>1996</td>
+<td>Sirius</td>
+<td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
 </tr>
 
 <tr>
@@ -23050,6 +23246,20 @@
 </tr>
 
 <tr>
+<td>Dogwitch</td>
+<td>2002</td>
+<td>Sirius</td>
+<td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dogwitch: Special Features</td>
+<td>2004</td>
+<td>Sirius</td>
+<td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Doin' Time With OJ</td>
 <td>1994</td>
 <td>Boneyard</td>
@@ -23117,6 +23327,13 @@
 <td>1991</td>
 <td>Eternity</td>
 <td><a href="EternityComics/EternityComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dolls</td>
+<td>1996</td>
+<td>Sirius</td>
+<td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
 </tr>
 
 <tr>
@@ -23943,6 +24160,13 @@
 <td>2006</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Drama</td>
+<td>1994</td>
+<td>Sirius</td>
+<td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
 </tr>
 
 <tr>
@@ -25166,6 +25390,13 @@
 <td>2006</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Eleven Or One: An Angry Christ Comic</td>
+<td>1995</td>
+<td>Sirius</td>
+<td><a href="SiriusEntertainment/SiriusEntertainment.html">Details</a></td>
 </tr>
 
 <tr>
