--- a/index.html
+++ b/index.html
@@ -898,6 +898,13 @@
 </tr>
 
 <tr>
+<td>666 Comics</td>
+<td>1997</td>
+<td>Publisher</td>
+<td><a href="DemonBaby/DemonBaby.html">Details</a></td>
+</tr>
+
+<tr>
 <td>777: The Wrath</td>
 <td>1998</td>
 <td>Avatar</td>
@@ -2063,6 +2070,13 @@
 </tr>
 
 <tr>
+<td>Addams And Evil</td>
+<td>1965</td>
+<td>Pocket Books</td>
+<td><a href="PocketBooks/PocketBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>AdHouse Books</td>
 <td>2002</td>
 <td>Publisher</td>
@@ -3165,6 +3179,13 @@
 <td>2003</td>
 <td>Avatar</td>
 <td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Alan Moore's Awesome Universe Handbook</td>
+<td>1999</td>
+<td>Awesome</td>
+<td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -4742,6 +4763,13 @@
 <td>1963</td>
 <td>Marvel</td>
 <td><a href="AmazingSpider-Man/AmazingSpiderman.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Amazing Spider-Man</td>
+<td>1977</td>
+<td>Pocket Books</td>
+<td><a href="PocketBooks/PocketBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7811,6 +7839,13 @@
 
 <tr>
 <td>Avengelyne</td>
+<td>1999</td>
+<td>Awesome</td>
+<td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Avengelyne</td>
 <td>2011</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
@@ -8027,9 +8062,30 @@
 </tr>
 
 <tr>
+<td>Awesome Adventures</td>
+<td>1999</td>
+<td>Awesome</td>
+<td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Awesome Comics</td>
 <td>1997</td>
 <td>Publisher</td>
+<td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Awesome Holiday Special</td>
+<td>1997</td>
+<td>Awesome</td>
+<td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Awesome Preview</td>
+<td>1997</td>
+<td>Awesome</td>
 <td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
 </tr>
 
@@ -8727,6 +8783,27 @@
 </tr>
 
 <tr>
+<td>Bank Street Book Of Creepy Tales</td>
+<td>1989</td>
+<td>Pocket Books</td>
+<td><a href="PocketBooks/PocketBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bank Street Book Of Fantasy</td>
+<td>1989</td>
+<td>Pocket Books</td>
+<td><a href="PocketBooks/PocketBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bank Street Book Of Mystery</td>
+<td>1989</td>
+<td>Pocket Books</td>
+<td><a href="PocketBooks/PocketBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Banner</td>
 <td>2001</td>
 <td>Marvel</td>
@@ -8891,6 +8968,13 @@
 <td>2004</td>
 <td>Last Gasp</td>
 <td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Barnaby</td>
+<td>1946</td>
+<td>Pocket Books</td>
+<td><a href="PocketBooks/PocketBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -11177,6 +11261,13 @@
 </tr>
 
 <tr>
+<td>Black Maria</td>
+<td>1964</td>
+<td>Pocket Books</td>
+<td><a href="PocketBooks/PocketBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Black Market</td>
 <td>2014</td>
 <td>Boom!</td>
@@ -13367,6 +13458,13 @@
 </tr>
 
 <tr>
+<td>Brigade</td>
+<td>2000</td>
+<td>Awesome</td>
+<td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Brigands</td>
 <td>2016</td>
 <td>Action Lab</td>
@@ -13546,6 +13644,27 @@
 <td>2015</td>
 <td>Boom!</td>
 <td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Brother Juniper</td>
+<td>1959</td>
+<td>Pocket Books</td>
+<td><a href="PocketBooks/PocketBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Brother Sebastian</td>
+<td>1959</td>
+<td>Pocket Books</td>
+<td><a href="PocketBooks/PocketBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Brother Sebastian At Large</td>
+<td>1963</td>
+<td>Pocket Books</td>
+<td><a href="PocketBooks/PocketBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -15928,6 +16047,13 @@
 </tr>
 
 <tr>
+<td>Chapel</td>
+<td>1997</td>
+<td>Awesome</td>
+<td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Champions</td>
 <td>1975</td>
 <td>Marvel</td>
@@ -17199,6 +17325,13 @@
 </tr>
 
 <tr>
+<td>Cobean's Naked Eye</td>
+<td>1952</td>
+<td>Pocket Books</td>
+<td><a href="PocketBooks/PocketBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Cobra</td>
 <td>2012</td>
 <td>IDW</td>
@@ -18081,6 +18214,13 @@
 </tr>
 
 <tr>
+<td>Conrad</td>
+<td>1985</td>
+<td>Pocket Books</td>
+<td><a href="PocketBooks/PocketBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Conservation Corps</td>
 <td>1993</td>
 <td>Archie</td>
@@ -18431,10 +18571,38 @@
 </tr>
 
 <tr>
+<td>Coven</td>
+<td>1997</td>
+<td>Awesome</td>
+<td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Coven: Black And White</td>
+<td>1998</td>
+<td>Awesome</td>
+<td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Coven: Dark Sister</td>
 <td>2001</td>
 <td>Avatar</td>
 <td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Coven: Fan Appreciation Edition</td>
+<td>1998</td>
+<td>Awesome</td>
+<td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Coven: Fantom Special</td>
+<td>1998</td>
+<td>Awesome</td>
+<td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -21749,6 +21917,13 @@
 </tr>
 
 <tr>
+<td>Degrassi: The Next Generation: Extra Credit</td>
+<td>2006</td>
+<td>Pocket Books</td>
+<td><a href="PocketBooks/PocketBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Deity</td>
 <td>1997</td>
 <td>Hyperwerks</td>
@@ -21921,6 +22096,13 @@
 <td>1972</td>
 <td>DC</td>
 <td><a href="Demon/Demon.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Demon Baby</td>
+<td>1997</td>
+<td>666 Comics</td>
+<td><a href="DemonBaby/DemonBaby.html">Details</a></td>
 </tr>
 
 <tr>
@@ -28234,6 +28416,27 @@
 </tr>
 
 <tr>
+<td>Fighting American</td>
+<td>1997</td>
+<td>Awesome</td>
+<td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Fighting American: Dogs Of War</td>
+<td>1998</td>
+<td>Awesome</td>
+<td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Fighting American: Rules Of The Game</td>
+<td>1997</td>
+<td>Awesome</td>
+<td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Fighting Daniel Boone</td>
 <td>1953</td>
 <td>Avon</td>
@@ -31870,6 +32073,13 @@
 <td>1995</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Glory</td>
+<td>1999</td>
+<td>Awesome</td>
+<td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -39291,6 +39501,41 @@
 </tr>
 
 <tr>
+<td>Judgment Day Alpha</td>
+<td>1997</td>
+<td>Awesome</td>
+<td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Judgment Day Omega</td>
+<td>1997</td>
+<td>Awesome</td>
+<td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Judgment Day: Aftermath</td>
+<td>1997</td>
+<td>Awesome</td>
+<td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Judgment Day: Final Judgment</td>
+<td>1997</td>
+<td>Awesome</td>
+<td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Judgment Day: Sourcebook</td>
+<td>1997</td>
+<td>Awesome</td>
+<td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Judo Girl</td>
 <td>2011</td>
 <td>Tidalwave</td>
@@ -39736,6 +39981,13 @@
 <td>1941</td>
 <td>Fiction House</td>
 <td><a href="Kaanga/Kaanga.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Kaboom</td>
+<td>1997</td>
+<td>Awesome</td>
+<td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -42571,6 +42823,13 @@
 <td>1994</td>
 <td>Disney</td>
 <td><a href="LionKing/LionKing.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Lionheart</td>
+<td>1999</td>
+<td>Awesome</td>
+<td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -46042,6 +46301,13 @@
 <td>1953</td>
 <td>Atlas</td>
 <td><a href="Menace/Menace.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Menace</td>
+<td>1998</td>
+<td>Awesome</td>
+<td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -53509,6 +53775,13 @@
 </tr>
 
 <tr>
+<td>Pocket Books</td>
+<td>1938</td>
+<td>Publisher</td>
+<td><a href="PocketBooks/PocketBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Pocket Change</td>
 <td>1993</td>
 <td>Publisher</td>
@@ -54613,6 +54886,13 @@
 </tr>
 
 <tr>
+<td>Prophet</td>
+<td>2000</td>
+<td>Awesome</td>
+<td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Proposition Player</td>
 <td>1999</td>
 <td>Vertigo</td>
@@ -55604,6 +55884,20 @@
 <td>2005</td>
 <td>Dynamite</td>
 <td><a href="Dynamite/Dynamite.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Re:Gex</td>
+<td>1998</td>
+<td>Awesome</td>
+<td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Re:Gex Wizard World Preview</td>
+<td>1998</td>
+<td>Awesome</td>
+<td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -58627,6 +58921,13 @@
 </tr>
 
 <tr>
+<td>Scarlet Crush</td>
+<td>1998</td>
+<td>Awesome</td>
+<td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Scarlet Kiss: The Vampyre</td>
 <td>1990</td>
 <td>Innovation</td>
@@ -60987,6 +61288,13 @@
 <td>1957</td>
 <td>Atlas</td>
 <td><a href="SixGunWestern/SixGunWestern.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Six-String Samurai</td>
+<td>1998</td>
+<td>Awesome</td>
+<td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -64756,10 +65064,24 @@
 </tr>
 
 <tr>
+<td>Supreme</td>
+<td>1997</td>
+<td>Awesome</td>
+<td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Supreme Power</td>
 <td>2003</td>
 <td>Marvel</td>
 <td><a href="SupremePower/SupremePower.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Supreme The Return</td>
+<td>1999</td>
+<td>Awesome</td>
+<td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -73553,6 +73875,27 @@
 <td>1992</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Youngblood</td>
+<td>1998</td>
+<td>Awesome</td>
+<td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Youngblood GT Interactive Ultra Game Players Special Edition</td>
+<td>1998</td>
+<td>Awesome</td>
+<td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Youngblood Special Exclusive Edition</td>
+<td>1997</td>
+<td>Awesome</td>
+<td><a href="AwesomeComics/AwesomeComics.html">Details</a></td>
 </tr>
 
 <tr>
