--- a/NewEnglandComics/NewEnglandComics.html
+++ b/NewEnglandComics/NewEnglandComics.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<b>New England Comics</b>
+<img src="NewEngland1.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -30,6 +30,35 @@
 <div class="mySlides" style="text-align: center;"><img src="NewEngland10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="NewEngland11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="NewEngland12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewEngland13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewEngland14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewEngland15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewEngland16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewEngland17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewEngland18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewEngland19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewEngland20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewEngland21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewEngland22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewEngland23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewEngland24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewEngland25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewEngland26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewEngland27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewEngland28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewEngland29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewEngland30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewEngland31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewEngland32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewEngland33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewEngland34.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewEngland35.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewEngland36.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewEngland37.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewEngland38.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewEngland39.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewEngland40.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewEngland41.jpg"></div>
 
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -40,45 +69,48 @@
 </p><p>
 Titles
 </p><p>
-<li>Anti-Hitler Comics  (1992)
-<li>Assassinate Hitler!     (2002)
-<li>Battron     (1992)
-<li>Buried Terror   (1995)
-<li>Chainsaw Vigilante  (1993)
-<li>Chainsaw Vigilante Bonanza  (1996)
-<li>The Chroma-Tick (1992)
-<li>The Collected Paul the Samurai  (1992)
-<li>Extinct (1991)
-<li>Famous Naval Battles of WW2     (2002)
-<li>Gestalt     (1993)
-<li>Hell on the Eastern Front   (2003)
-<li>In Country Vietnam  (2001)
-<li>Introducing the Tick    (2002)
-<li>Man-Eating Cow  (1992)
-<li>Man-Eating Cow &amp; the Chainsaw Vigilante: The Complete Works (2009)
-<li>Man-Eating Cow Bonanza Edition  (1996)
-<li>The Mangalicious Tick   (2009)
-<li>My Terrible Romance     (1994)
-<li>Nuclear War     (2001)
-<li>O.S.S. in WW2   (2002)
-<li>Paul the Samurai    (1990)
-<li>Rockin' Bones   (1992)
-<li>Rockin' Bones Xmas Special  (1992)
-<li>Story of Operation Desert Storm (2003)
-<li>Stürm Battalion     (2003)
-<li>Tales Too Terrible to Tell  (1989)
-<li>Terrology   (1993)
-<li>Terror in America   (2002)
-<li>The Tick    (1988)
-<li>Tick &amp; Artie    (2002)
-<li>Waffen SS   (2000)
-<li>WW2 (2000)
-<li>WW2 Presents: Hitler's Special Forces   (2003)
-<li>WW2: Hitler's Paratroopers  (2004)
-<li>WW2: Presents Flying Tigers     (2006)
-<li>WW2: Rommel (2005)
-<li>WW2: Storm Troops   (2006)
-<li>WW2: U-Boats    (2003)
+<li><a href="NewEngland1.jpg">Anti-Hitler Comics</a>  (1992)
+<li><a href="NewEngland2.jpg">Assassinate Hitler!</a> (2002)
+<li><a href="NewEngland3.jpg">Battron</a> (1992)
+<li><a href="NewEngland4.jpg">Buried Terror</a> (1995)
+<li><a href="NewEngland5.jpg">Chainsaw Vigilante</a>  (1993)
+<li><a href="NewEngland6.jpg">Chainsaw Vigilante Bonanza</a>  (1996)
+<li><a href="NewEngland7.jpg">Chroma-Tick</a> (1992)
+<li><a href="NewEngland8.jpg">Collected Paul the Samurai</a>  (1992)
+<li><a href="NewEngland9.jpg">Extinct</a> (1991)
+<li><a href="NewEngland10.jpg">Famous Naval Battles of WW2</a>     (2002)
+<li><a href="NewEngland11.jpg">Gestalt</a>     (1993)
+<li><a href="NewEngland12.jpg">Hell on the Eastern Front</a>   (2003)
+<li><a href="NewEngland13.jpg">In Country Vietnam</a>  (2001)
+<li><a href="NewEngland14.jpg">Introducing the Tick</a>    (2002)
+<li><a href="NewEngland15.jpg">Man-Eating Cow</a>  (1992)
+<li><a href="NewEngland16.jpg">Man-Eating Cow &amp; the Chainsaw Vigilante: The Complete Works</a> (2009)
+<li><a href="NewEngland17.jpg">Man-Eating Cow Bonanza Edition</a>  (1996)
+<li><a href="NewEngland18.jpg">Mangalicious Tick</a>   (2009)
+<li><a href="NewEngland19.jpg">My Terrible Romance</a>     (1994)
+<li><a href="NewEngland20.jpg">Nuclear War</a>     (2001)
+<li><a href="NewEngland21.jpg">O.S.S. in WW2</a>   (2002)
+<li><a href="NewEngland22.jpg">Paul the Samurai</a>    (1990)
+<li><a href="NewEngland23.jpg">Rockin' Bones</a>   (1992)
+<li><a href="NewEngland24.jpg">Rockin' Bones Xmas Special</a>  (1992)
+<li><a href="NewEngland25.jpg">Story of Operation Desert Storm</a> (2003)
+<li><a href="NewEngland26.jpg">Stürm Battalion</a>  (2003)
+<li><a href="NewEngland27.jpg">Tales Too Terrible to Tell</a>  (1989)
+<li><a href="NewEngland28.jpg">Terrology</a>   (1993)
+<li><a href="NewEngland29.jpg">Terror in America</a>   (2002)
+<li><a href="NewEngland30.jpg">Tick</a> (1988)
+<li><a href="NewEngland31.jpg">Tick &amp; Artie</a> (2002)
+<li><a href="NewEngland32.jpg">Tick &amp; Arthur</a> (2002)
+<li><a href="NewEngland33.jpg">Waffen SS   (2000)
+<li><a href="../WW2/WW2.html">WW2</a> (2000)
+<li><a href="NewEngland34.jpg">WW2 Presents: Hitler's Special Forces</a>   (2003)
+<li><a href="NewEngland35.jpg">WW2: Hitler's Paratroopers</a>  (2004)
+<li><a href="NewEngland36.jpg">WW2: Presents Flying Tigers</a>     (2006)
+<li><a href="NewEngland37.jpg">WW2: Rommel</a> (2005)
+<li><a href="NewEngland38.jpg">WW2: Storm Troops</a>   (2006)
+<li><a href="NewEngland39.jpg">WW2: U-Boat</a>  (2003)
+<li><a href="NewEngland40.jpg">WW2: War In The Air</a>  (2003)
+<li><a href="NewEngland41.jpg">Y2K: The Comic</a>  (1999)
 </p>
 
 </body>
