--- a/index.html
+++ b/index.html
@@ -56819,6 +56819,13 @@
 </tr>
 
 <tr>
+<td>Red Bullet Comics</td>
+<td>1993</td>
+<td>Publisher</td>
+<td><a href="RedBulletComics/RedBulletComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Red Circle Sorcery</td>
 <td>1974</td>
 <td>Archie</td>
@@ -74030,6 +74037,13 @@
 <td>2015</td>
 <td>Fantagraphics</td>
 <td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>WW2</td>
+<td>2000</td>
+<td>New England</td>
+<td><a href="WW2/WW2.html">Details</a></td>
 </tr>
 
 <tr>
