--- a/index.html
+++ b/index.html
@@ -5508,6 +5508,13 @@
 </tr>
 
 <tr>
+<td>Andromeda</td>
+<td>1977</td>
+<td>Andromeda Publications</td>
+<td><a href="Andromeda/Andromeda.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Andromeda Stories</td>
 <td>2007</td>
 <td>Vertical</td>
@@ -5862,6 +5869,13 @@
 <td>2016</td>
 <td>Aftershock</td>
 <td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aniverse</td>
+<td>1987</td>
+<td>Wee Bee</td>
+<td><a href="WeeBeeComics/WeeBeeComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7989,6 +8003,13 @@
 <td>2018</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Avalon</td>
+<td>1986</td>
+<td>Harrier</td>
+<td><a href="Avalon/Avalon.html">Details</a></td>
 </tr>
 
 <tr>
@@ -35121,6 +35142,13 @@
 </tr>
 
 <tr>
+<td>Harrier Comics</td>
+<td>1984</td>
+<td>Publisher</td>
+<td><a href="HarrierComics/HarrierComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Harrow County</td>
 <td>2015</td>
 <td>Dark Horse</td>
@@ -43958,6 +43986,13 @@
 <td>2006</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Lobo</td>
+<td>1993</td>
+<td>DC</td>
+<td><a href="Lobo/Lobo.html">Details</a></td>
 </tr>
 
 <tr>
@@ -55301,6 +55336,13 @@
 </tr>
 
 <tr>
+<td>Prelude Graphics</td>
+<td>1987</td>
+<td>Publisher</td>
+<td><a href="PreludeGraphics/PreludeGraphics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Premier Magazines</td>
 <td>1954</td>
 <td>Publisher</td>
@@ -56774,6 +56816,13 @@
 <td>1986</td>
 <td>Arrow</td>
 <td><a href="ArrowComics/ArrowComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Realm</td>
+<td>1988</td>
+<td>Wee Bee</td>
+<td><a href="WeeBeeComics/WeeBeeComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -72315,6 +72364,13 @@
 <td>1998</td>
 <td>Avatar</td>
 <td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wee Bee Comics</td>
+<td>1987</td>
+<td>Publisher</td>
+<td><a href="WeeBeeComics/WeeBeeComics.html">Details</a></td>
 </tr>
 
 <tr>
