--- a/CaliberComics/CaliberComics.html
+++ b/CaliberComics/CaliberComics.html
@@ -91,6 +91,7 @@
 <div class="mySlides" style="text-align: center;"><img src="CaliberComics69.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="CaliberComics70.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="CaliberComics73.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaliberComics74.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -110,6 +111,7 @@ Titles
 <li><a href="CaliberComics18.jpg">Autumn</a> (1995)
 <li><a href="CaliberComics5.jpg">Baker Street</a> (1989)
 <li><a href="CaliberComics6.jpg">Beck &amp; Caul</a> (1994)
+<li><a href="CaliberComics74.jpg">Berzerker</a> (1993)
 <li><a href="CaliberComics7.jpg">Big Bang Comics</a> (1994)
 <li><a href="CaliberComics8.jpg">Black Mist</a> (1994)
 <li><a href="CaliberComics9.jpg">Boston Bombers</a> (1990)
