--- a/Comico/Comico.html
+++ b/Comico/Comico.html
@@ -20,6 +20,7 @@
 
 <div class="mySlides" style="text-align: center;"><img src="Comico1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Comico2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Comico42.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Comico3.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Comico4.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Comico5.jpg"></div>
@@ -72,6 +73,7 @@ Titles
 </p><p>
 <li><a href="Comico1.jpg">Amazon</a> (1989)
 <li><a href="Comico2.jpg">Az</a> (1983)
+<li><a href="Comico42.jpg">Bloodscent</a> (1988)
 <li><a href="Comico3.jpg">E-Man</a> (1989)
 <li><a href="Comico4.jpg">Elementals</a> (1984)
 <li><a href="Comico5.jpg">Evangeline</a> (1984)
