--- a/index.html
+++ b/index.html
@@ -7173,6 +7173,13 @@
 </tr>
 
 <tr>
+<td>Artline Studios</td>
+<td>2010</td>
+<td>Publisher</td>
+<td><a href="ArtlineStudios/ArtlineStudios.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Arya</td>
 <td>2017</td>
 <td>Antarctic Press</td>
@@ -10293,6 +10300,13 @@
 </tr>
 
 <tr>
+<td>Berzerker</td>
+<td>1993</td>
+<td>Caliber</td>
+<td><a href="CaliberComics/CaliberComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Beset By Demons</td>
 <td>1992</td>
 <td>Tundra</td>
@@ -12497,6 +12511,13 @@
 <td>1995</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bloodscent</td>
+<td>1988</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
 </tr>
 
 <tr>
@@ -18737,6 +18758,13 @@
 <td>1994</td>
 <td>Marvel</td>
 <td><a href="Coneheads/Coneheads.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Conquest Press</td>
+<td>1991</td>
+<td>Publisher</td>
+<td><a href="ConquestPress/ConquestPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -33477,6 +33505,13 @@
 </tr>
 
 <tr>
+<td>Graphik Publikations Inc (GPI)</td>
+<td>1983</td>
+<td>Publisher</td>
+<td><a href="GraphikPublikations/GraphikPublikations.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Grass Kings</td>
 <td>2017</td>
 <td>Boom!</td>
@@ -37792,6 +37827,13 @@
 <td>1989</td>
 <td>MPI</td>
 <td><a href="Impact/Impact.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Imperial Comics</td>
+<td>1986</td>
+<td>Publisher</td>
+<td><a href="ImperialComics/ImperialComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -54012,6 +54054,13 @@
 <td>1997</td>
 <td>5th Panel</td>
 <td><a href="5thPanelComics/5thPanelComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Pied Piper Comics</td>
+<td>1986</td>
+<td>Publisher</td>
+<td><a href="PiedPiperComics/PiedPiperComics.html">Details</a></td>
 </tr>
 
 <tr>
