--- a/index.html
+++ b/index.html
@@ -45367,7 +45367,6 @@
 <td><a href="Mad/Mad.html">Details</a></td>
 </tr>
 
-
 <tr>
 <td>Mad Magazine</td>
 <td>2018</td>
@@ -45380,6 +45379,13 @@
 <td>1969</td>
 <td>Marvel</td>
 <td><a href="MadAboutMillie/MadAboutMillie.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mad Dog Graphics</td>
+<td>1987</td>
+<td>Publisher</td>
+<td><a href="MadDogGraphics/MadDogGraphics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -62958,6 +62964,13 @@
 </tr>
 
 <tr>
+<td>Slave Labor Graphics (SLG)</td>
+<td>1986</td>
+<td>Publishers</td>
+<td><a href="SlaveLaborGraphics/SlaveLaborGraphics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Sleepwalk And Other Stories</td>
 <td>1997</td>
 <td>Drawn &amp; Quarterly</td>
@@ -65704,7 +65717,7 @@
 <tr>
 <td>Street Angel</td>
 <td>2004</td>
-<td>Slave Labor Graphics</td>
+<td>Slave Labor</td>
 <td><a href="StreetAngel/StreetAngel.html">Details</a></td>
 </tr>
 
