--- a/DarkHorse/DarkHorse.html
+++ b/DarkHorse/DarkHorse.html
@@ -330,6 +330,7 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="../DocStearnMrMonster/DocStearnMrMonster.html">Doc Stearn...Mr. Monster</a> (1988)
 <li><a href="../Dollhouse/Dollhouse.html">Dollhouse</a> (2010)
 <li><a href="Darkhorse112.jpg">Dominion</a> (1993)
+<li><a href="../Domu/Domu.html">Domu: A Child's Dream</a> (1995)
 <li><a href="../DOTA2/DOTA2.html">DOTA 2</a> (2017)
 <li><a href="../DrGiggles/DrGiggles.html">Dr. Giggles</a> (1992)
 <li><a href="Darkhorse113.jpg">Dr. Robot Special</a> (2000)
