--- a/index.html
+++ b/index.html
@@ -2685,6 +2685,13 @@
 </tr>
 
 <tr>
+<td>Adventures Of Theown</td>
+<td>1986</td>
+<td>Pyramid</td>
+<td><a href="PyramidProductions/PyramidProductions.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Adventures Of Young Dr. Masters</td>
 <td>1964</td>
 <td>Archie</td>
@@ -9248,6 +9255,13 @@
 <td>1990</td>
 <td>AC Comics</td>
 <td><a href="ACComics/ACComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Barbaric Tales</td>
+<td>1986</td>
+<td>Pyramid</td>
+<td><a href="PyramidProductions/PyramidProductions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -20560,6 +20574,13 @@
 </tr>
 
 <tr>
+<td>CyberHawks</td>
+<td>1987</td>
+<td>Pyramid</td>
+<td><a href="PyramidProductions/PyramidProductions.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Cyberkitties</a>
 <td>1998</td>
 <td>MU Press</td>
@@ -20824,6 +20845,13 @@
 <td>1989</td>
 <td>Marvel</td>
 <td><a href="DamageControl/DamageControl.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Damlog</td>
+<td>1987</td>
+<td>Pyramid</td>
+<td><a href="PyramidProductions/PyramidProductions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -21475,6 +21503,13 @@
 <td>1997</td>
 <td>Antarctic Press</td>
 <td><a href="AntarcticPress/AntarcticPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dark Visions</td>
+<td>1986</td>
+<td>Pyramid</td>
+<td><a href="PyramidProductions/PyramidProductions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -23590,6 +23625,13 @@
 </tr>
 
 <tr>
+<td>Dimension Z</td>
+<td>1986</td>
+<td>Pyramid</td>
+<td><a href="PyramidProductions/PyramidProductions.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dingo</td>
 <td>2009</td>
 <td>Boom!</td>
@@ -24469,6 +24511,13 @@
 <td>1987</td>
 <td>Amazing</td>
 <td><a href="Amazing1987/Amazing1987.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Domu: A Child's Dream</td>
+<td>1995</td>
+<td>Dark Horse</td>
+<td><a href="Domu/Domu.html">Details</a></td>
 </tr>
 
 <tr>
@@ -51656,6 +51705,13 @@
 </tr>
 
 <tr>
+<td>Night Wynd Enterprises</td>
+<td>1991</td>
+<td>Publisher</td>
+<td><a href="NightWynd/NightWynd.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Nights Dominion</td>
 <td>2016</td>
 <td>Oni</td>
@@ -52689,6 +52745,13 @@
 <td>1998</td>
 <td>Chaos!</td>
 <td><a href="ChaosComics/ChaosComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Omicron: The Astounding Adventures On Other Worlds</td>
+<td>1987</td>
+<td>Pyramid</td>
+<td><a href="PyramidProductions/PyramidProductions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -59388,6 +59451,13 @@
 <td>2002</td>
 <td>Alternative</a>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ruck bud Webster And his Screeching Commandos</td>
+<td>1987</td>
+<td>Pyramid</td>
+<td><a href="PyramidProductions/PyramidProductions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -74491,6 +74561,13 @@
 <td>1986</td>
 <td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>World Of X-Ray</td>
+<td>1987</td>
+<td>Pyramid</td>
+<td><a href="PyramidProductions/PyramidProductions.html">Details</a></td>
 </tr>
 
 <tr>
